--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "A library for observing when state changes",
   "main": "test.js",
   "scripts": {
-    "watch": "watchify -d -o example/index.min.js example/index.js & ws -d example",
+    "start": "esbuild --bundle example/index.js --outfile=example/index.min.js --minify --sourcemap & servatron -p 8080 -d example",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "state",
+    "state management"
+  ],
+  "author": {
+    "name": "Mark Wylde",
+    "email": "me@markwylde.com",
+    "url": "https://github.com/markwylde"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "local-web-server": "^4.0.0",
-    "watchify": "^3.11.1"
+    "esbuild": "^0.12.9",
+    "servatron": "^1.1.3"
+  },
+  "dependencies": {
+    "events": "^3.3.0"
   }
 }
