--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "statemitter",
   "version": "1.1.0",
   "description": "A library for observing when state changes",
-  "main": "test.js",
+  "main": "index.js",
   "scripts": {
-    "start": "esbuild --bundle example/index.js --outfile=example/index.min.js --minify --sourcemap & servatron -p 8080 -d example",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "esbuild --bundle example/index.js --outfile=example/index.min.js --sourcemap & servatron -p 8080 -d example",
+    "test": "c8 node test"
   },
   "keywords": [
     "state",
@@ -18,6 +18,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "basictap": "^2.0.1",
+    "c8": "^7.7.3",
     "esbuild": "^0.12.9",
     "servatron": "^1.1.3"
   },
