--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "statemitter",
   "version": "2.0.0",
   "description": "A library for observing when state changes",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "type": "module",
   "scripts": {
+    "prepare": "tsc && typedoc",
+    "docs": "typedoc",
     "start": "esbuild --bundle example/index.js --outfile=example/index.min.js --sourcemap & servatron -p 8080 -d example",
     "test": "c8 node test"
   },
@@ -22,10 +25,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "basictap": "^2.0.1",
     "c8": "^7.7.3",
     "esbuild": "^0.12.9",
-    "servatron": "^1.1.3"
+    "servatron": "^1.1.3",
+    "typedoc": "^0.21.2",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "events": "^3.3.0"
