--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "2.0.2",
   "description": "A library for observing when state changes",
   "main": "lib/index.js",
-  "type": "module",
   "scripts": {
     "prepare": "tsc && typedoc",
     "docs": "typedoc",
@@ -25,7 +24,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/events": "^3.0.0",
+    "@types/node": "^15.14.0",
     "basictap": "^2.0.1",
     "c8": "^7.7.3",
     "esbuild": "^0.12.9",
