--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "ES2015",
-    "module": "ES2020",
+    "module": "CommonJS",
     "declaration": true,
     "strict": true,
     "esModuleInterop": true,
